--- a/calculadora.html
+++ b/calculadora.html
@@ -1,50 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/css.css">
-
+    
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-    <div id="C1">
+    <div class="container">
         <form name="Calculadora">
-            <input type="textfield" name="ans" value="" autocomplete="off" readonly>
+            <div class="container bg-dark contenedor">
+                <div class="row">
+                    <div class="col">
+                        <input type="textfield" name="ans" value="" autocomplete="off" readonly>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <input type="button" value="7" class="btn btn-outline-warning" onclick="siete()">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="8" class="btn btn-outline-warning" onclick="ocho()">
 
-            <br>
+                    </div>
+                    <div class="col">
+                        <input type="button" value="9" class="btn btn-outline-warning" onclick="nueve()">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="+" class="btn btn-outline-danger"
+                            onclick="document.Calculadora.ans.value+='+'">
+                    </div>
+                </div>
 
-            <input type="button" value="7" onclick="siete()">
-            <input type="button" value="8" onclick="ocho()">
-            <input type="button" value="9" onclick="nueve()">
-            <input type="button" value="+" onclick="document.Calculadora.ans.value+='+'">
+                <div class="row">
+                    <div class="col">
+                        <input type="button" value="4" class="btn btn-outline-warning" onclick="cuatro()">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="5" class="btn btn-outline-warning" onclick="cinco()">
 
-            <br>
+                    </div>
+                    <div class="col">
+                        <input type="button" value="6" class="btn btn-outline-warning" onclick="seis()">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="-" class="btn btn-outline-danger"
+                            onclick="document.Calculadora.ans.value+='-'">
+                    </div>
+                </div>
 
-            <input type="button" value="4" onclick="cuatro()">
-            <input type="button" value="5" onclick="cinco()">
-            <input type="button" value="6" onclick="seis()">
-            <input type="button" value="-" onclick="document.Calculadora.ans.value+='-'">
+                <div class="row">
+                    <div class="col">
+                        <input type="button" value="1" class="btn btn-outline-warning" onclick="uno()">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="2" class="btn btn-outline-warning" onclick="dos()">
 
-            <br>
+                    </div>
+                    <div class="col">
+                        <input type="button" value="3" class="btn btn-outline-warning" onclick="tres()">
 
-            <input type="button" value="1" onclick="uno()">
-            <input type="button" value="2" onclick="dos()">
-            <input type="button" value="3" onclick="tres()">
-            <input type="button" value="*" onclick="document.Calculadora.ans.value+='*'">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="*" class="btn btn-outline-danger"
+                            onclick="document.Calculadora.ans.value+='*'">
+                    </div>
+                </div>
 
-            <br>
+                <div class="row">
+                    <div class="col">
+                        <input type="button" value="0" class="btn btn-outline-warning" onclick="cero()">
+                    </div>
+                    <div class="col">
+                        <input type="reset" value="C" class="btn btn-outline-danger">
 
-            <input type="button" value="0" onclick="cero()">
-            <input type="reset" value="C">
-            <input type="button" value="=" onclick="document.Calculadora.ans.value=eval(document.Calculadora.ans.value)">
-            <input type="button" value="/" onclick="document.Calculadora.ans.value+='/'">
+                    </div>
+                    <div class="col">
+                        <input type="button" value="=" class="btn btn-warning"
+                            onclick="document.Calculadora.ans.value=eval(document.Calculadora.ans.value)">
 
+                    </div>
+                    <div class="col">
+                        <input type="button" value="/" class="btn btn-outline-danger"
+                            onclick="document.Calculadora.ans.value+='/'">
+                    </div>
+                </div>
+            </div>
         </form>
 
     </div>
-        <script src="js/calculadora.js"></script>
+    <script src="/js/calculadora.js"></script>
 </body>
+
 </html>
